src/EPR.Calculator.Frontend/wwwroot/css/styles.css
.epr-\!-account-info {
    display: flex;
    float: right;

    .your-name {
        margin-right: 8px;
        white-space: nowrap;
    }

    .account-link {
        color: #1d70b8;
        text-underline-offset: 0.1578em;
        white-space: nowrap;
    }
}

.dashboard-page {
    .tile-group {
        .tile {
            color: white;
            min-height: 82px;
            position: relative;
            margin-bottom: 26px;

            .more-info {
                color: white;
                font-size: 16px;
            }
        }

        a {
            display: block;
            background-color: #1d70b8;
            text-decoration: none;
            padding: 11px;

            .heading {
                color: white;
                margin-bottom: 10px;
                min-height: 38px;
            }

            .heading:hover {
                color: #d9e7f3;
            }
        }
    }

    .header-container {
        display: flex;
        margin: 0;
    }

    .caption-text {
        float: left;
        width: 68%;
    }

    .filter-container {
        display: flex;
        justify-content: end;
        float: right;
        padding: 0;
    }

    .govuk-summary-list {
        border-top: 1px solid #b1b4b6;

        .govuk-summary-list__actions {
            vertical-align: middle;
        }
    }

    .govuk-tag {
        font-size: 1rem;
        font-weight: 700;
        letter-spacing: 1px;
    }

    .govuk-tag--grey {
        color: #383f43;
        background: #eeefef;
    }

    .govuk-tag--blue {
        color: #144e81;
        background: #d2e2f1;
    }
}

.calculator-run-h2 {
    overflow-wrap: break-word;
}

.align-checkbox {
    display: flex;
    margin-top: 20px;
}

.checkbox-item-label{
    width: 350px !important;
}

.accept-button {
    background-color: #ffffff;
    border: 1px solid #00703c;
    color: #00703c;
    margin-left: 10px;
    margin-left: 0px;
    box-shadow: 0 2px 0 rgb(0, 112, 60);
}

.reject-button {
    background-color: #ffffff;
    border: 1px solid #d4351c;
    color: #d4351c;
    margin-left: 10px;
    margin-left: 30px;
    box-shadow: 0 2px 0 rgb(212, 53, 28);
}

